--- a/lib/Chess/Plisco.pod
+++ b/lib/Chess/Plisco.pod
@@ -416,12 +416,25 @@ piece of the opponent, this bitboard gives all squares where the check can be
 blocked.  These are all squares between the king and the attacking piece,
 including the square where the attacker is standing.
 
-=item B<enPassantShift>
+=item B<enPassant>
 
-If en-passant is possible, returns the shift of the square where the capturing
-pawn has to move.  If en-passant is not possible, 0 is returned.  0 happens to
-be the shift of "a1" but "a1" is not a valid en-passant square.  It is
-therefore safe to use this method in boolean context.
+Return a 4-bit value. The highest bit signals whether en passant is possible.
+The lower 3 bit give the en passant file.
+
+There is no method B<enPassantFile> and that is by design.  If en passant is
+possible on the a file, the method would return 0 which is the a file encoded.
+The normal pattern is therefore:
+
+=over 8
+    my $ep = $pos->enPassant;
+    if ($ep) {
+        my $ep_file = $ep & 7;
+        my $ep_square = $pos->enPassantFileToShift($ep);
+    }
+=back
+
+However, there is no need to mask out the highest bit because the library
+does that for you wherever an en passant file is expected.
 
 =item B<material>
 
@@ -1236,6 +1249,12 @@ signatures.
 
 If you want a different seed, you should override the constant
 L</CP_RANDOM_SEED>.
+
+=item B<enPassantFileToShift(FILE, COLOUR)>
+
+Given an en passant file B<FILE> return the shift of the en passant square
+for colour B<C>. Instead of a file (0-8) you can also pass a complete
+en passant info (0-16) where bit 4 is set.
 
 =back
 
