test for check on-the-fly

--- a/lib/Chess/Plisco.pod
+++ b/lib/Chess/Plisco.pod
@@ -197,6 +197,32 @@ use the object as a string:
 Returns a list of legal moves for the current position.  A move is just an
 integer.
 
+=item B<inCheck>
+
+Returns false if the side to move is not in check, a truthy value otherwise.
+The truthy value returned is a bitboard of all pieces giving check.
+
+In array context, the method returns extended information about the check
+that is required by checkPseudoLegalMove, see below. In detail, this is
+the bitboard of all pieces giving check,  the position of the king (0-63),
+and a so-called evasion bitboard (64 bits).  To understand the evasion
+bitboard, you have to recall how a check can be defended:
+
+1. The king moves out of check, eventually capturing the attacker.
+2. Another piece captures the attacker.
+3. Another piece moves between the piece giving check and the king.
+
+Option 1 will always work. In this case, the evasion bitboard will be 0 (and
+can be ignored).
+
+Option 2 only works if there is just one piece giving check. In this case,
+the evasion bitboard is identical to the bitboard of the pieces giving check.
+
+Option 3 only works if a sliding piece (queen, rook, or bishop) gives check.
+Knights jump over other pieces and a pawn can only give check from an adjacent
+square. In this case, the evasion bitboard includes all squares between the
+king and the piece giving check, including the square of the attacking piece.
+
 =item B<pseudoLegalMoves>
 
 Generates all pseudo-legal moves for the current position.
@@ -211,6 +237,32 @@ If you also need the captured piece and the color, you either have to call
 L</legalMoves> or you must use the state information returned from L</doMove>
 to retrieve the enriched move.  The first element of the state array is the
 enriched move.
+
+The only reason why you want to call pseudoLegalMoves is performance because
+filtering out those moves that will leave the king in check is somewhat
+expensive. In a search with alpha beta pruning, it is more efficient to delay
+that check because the engine may decide to prune that move and not try it
+out.
+
+For a concrete implementation, it is helpful to know how B<legalMoves()> is
+implemented:
+
+    sub legalMoves {
+        my ($self) = @_;
+
+        my @check_info = $self->inCheck($self);
+
+        my @legal;
+        foreach my $move ($self->pseudoLegalMoves) {
+            $move = $self->checkPseudoLegalMove($move, @check_info) or next;
+            push @legal, $move;
+        }
+
+        return @legal;
+    }
+
+The method calls B<inCheck()> in list context and passes that information to
+the legality checker.
 
 =item B<pseudoLegalAttacks>
 
@@ -382,39 +434,6 @@ you have to override either the pseudo-random number generator L</RNG> or its
 seed L</CP_RANDOM_SEED>.  If you turn the constant L</CP_RANDOM_SEED> into
 a non-constant subroutine, you can also get different signatures, whenever
 you re-load the library.
-
-=item B<inCheck>
-
-Returns false if the side to move is not in check, a truthy value otherwise.
-The truthy value returned is a bitboard of all pieces giving check.
-
-=item B<evasion>
-
-If the side to move is in check, returns the required check evasion strategy:
-
-=over 4
-
-=item L</CP_EVASION_KING_MOVE>
-
-The king must move.  This is the case, when multiple pieces give check.
-
-=item L</CP_EVASION_CAPTURE>
-
-Either the king must move or the piece giving check must be captured.
-
-=item L</CP_EVASION_ALL>
-
-Either the king must move, the piece giving check must be captured, or another
-piece must be moved between the king and the attacking piece.
-
-=back
-
-=item B<evasionSquares>
-
-If a check can be evaded by moving a piece between the king and the attacking
-piece of the opponent, this bitboard gives all squares where the check can be
-blocked.  These are all squares between the king and the attacking piece,
-including the square where the attacker is standing.
 
 =item B<enPassant>
 
