--- a/lib/Chess/Plisco.pod
+++ b/lib/Chess/Plisco.pod
@@ -368,11 +368,6 @@ Returns the number of half-moves made.  Initially, this is 0.  After white has
 made their first move, it is 1. After black has made their first move, it is
 2, and so on.
 
-=item B<reversibleClock>
-
-Returns the number of reversible moves immediately leading to the current
-position.  The following moves are irreversible:
-
 =over 4
 
 =item Pawn moves
@@ -403,9 +398,10 @@ the half-move clock has reached 100.
 
 =item B<halfmoveClock>
 
-Like L</irreversibleClock> but only captures and pawn moves are considered
-irreversible. Changes to the castling state are ignored.  This is the value
-that is relevant for claiming a draw according to the 50-move Rule.
+Number of subsequent irreversible halfmoves. Irreversible moves in this sense
+are all captures and pawn moves. Changes to the castling state are ignored.
+This is the value that is relevant for claiming a draw according to the
+50-move rule.
 
 =item B<signature>
 
@@ -1384,10 +1380,6 @@ A bitboard of all pawns (black and white) on the board.  See also L</pawns>.
 =item B<POS-E<gt>[CP_POS_HALFMOVES]>
 
 The number of half-moves made.  See also L</halfmoves>.
-
-=item B<POS-E<gt>[CP_POS_IRREVERSIBLE_CLOCK]>
-
-The current value of the irreversible clock.  See also L</irreversibleClock>.
 
 =item B<POS-E<gt>[CP_POS_IN_CHECK]>
 
