--- a/lib/Chess/Plisco.pod
+++ b/lib/Chess/Plisco.pod
@@ -671,7 +671,7 @@ move that was given as an argument to L</applyMove>.
 
 Engines should use the method L</unmove> instead because it is faster.
 
-=item B<doMove(MOVE)>
+=item B<doMove(MOVE[, NO_BACKUP])>
 
 Applies the move represented by the integer(!) B<MOVE> to the position.  If
 the move is legal, the method returns state information that can be used to
@@ -681,11 +681,8 @@ The method returns false, if the move is illegal.  Note that this is not a
 complete legality check but works only for those moves that
 L</pseudoLegalMoves> has returned for the current position.
 
-This method is fast and is the one that should be used by engines.
-
-The state information returned is an array of various bits of information.
-The first one is the move itself but the captured piece is set in that
-move.
+The method returns state information that can later be used to undo the move
+and reset the position to the state it had before the move was applied.
 
 Engines should use the method L</move> instead because it is faster.
 
@@ -695,6 +692,38 @@ If B<STATE> is state information returned by L</doMove>, takes back the
 move that was given as an argument to L</doMove>.
 
 Engines should use the method L</unmove> instead because it is faster.
+
+=item B<move(MOVE[, NO_BACKUP]>)
+
+Does the move B<MOVE> which must be legal because no legality check is
+performed.
+
+The method returns state information that can later be used to undo the move
+and reset the position to the state it had before the move was applied. The
+state information is in fact a copy of the object itself. If you pass a
+truthy value for B<NO_BACKUP> this copy is not made which safes a little time.
+
+Rationale: If you search a position you will often have code like this:
+
+    foreach my $move ($position->legalMoves) {
+        my $state = $position->move($move);
+        # ... do something with $position.
+        $position->unmove($state);
+    }
+
+That has an avoidable overhead. First, you can avoid creating a backup
+of the position over and over again. And second, you can save one method
+invocation:
+
+    my @backup = @$position;
+    foreach my $move ($position->legalMoves) {
+        $position->move($move, 1);
+        # ... do something with $position.
+        @$position = @backup;
+    }
+
+This saves just a little time but when you are searching hundreds of thousands
+of positions, this is signifcant.
 
 =item B<SEE(MOVE)>
 
